add method put in code
